{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 342,
  "lineage": "42cf7bf3-fcce-0d79-3601-7dc59afe50e0",
  "resources": [
    {
      "module": "module.active-network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:security-group/sg-097a135497f2bc021",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097a135497f2bc021",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "501268445310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512d6922b283dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.active-network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:security-group/sg-012cd3b901491fb03",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012cd3b901491fb03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2",
            "name_prefix": "",
            "owner_id": "501268445310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2"
            },
            "tags_all": {
              "Name": "ec2",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512d6922b283dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:501268445310:loadbalancer/app/redes-alb-us-east-1/abe0daacd8f05960",
            "arn_suffix": "app/redes-alb-us-east-1/abe0daacd8f05960",
            "desync_mitigation_mode": "defensive",
            "dns_name": "redes-alb-us-east-1-1403289414.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:501268445310:loadbalancer/app/redes-alb-us-east-1/abe0daacd8f05960",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "redes-alb-us-east-1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-082ac7f704e00b1b8",
              "sg-097a135497f2bc021"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-032767e2afd553746"
              },
              {
                "subnet_id": "subnet-0f51686ad7da1d1fa"
              }
            ],
            "subnets": [
              "subnet-032767e2afd553746",
              "subnet-0f51686ad7da1d1fa"
            ],
            "tags": {
              "Name": "redes-alb"
            },
            "tags_all": {
              "Name": "redes-alb",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0512d6922b283dab8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.active-network.aws_security_group.alb",
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.data.aws_region.current",
            "module.active-network.module.alb.aws_security_group.this",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.active-network.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:501268445310:listener/app/redes-alb-us-east-1/abe0daacd8f05960/e4d57bf94fee605e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:501268445310:targetgroup/api-20230611212953644200000006/bd646055d7fd6343",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:501268445310:listener/app/redes-alb-us-east-1/abe0daacd8f05960/e4d57bf94fee605e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:501268445310:loadbalancer/app/redes-alb-us-east-1/abe0daacd8f05960",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "redes-alb"
            },
            "tags_all": {
              "Name": "redes-alb",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.aws_security_group.alb",
            "module.active-network.aws_security_group.ec2",
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.data.aws_region.current",
            "module.active-network.module.alb.aws_lb.this",
            "module.active-network.module.alb.aws_lb_target_group.main",
            "module.active-network.module.alb.aws_security_group.this",
            "module.active-network.module.ec2-api.aws_instance.this",
            "module.active-network.module.ec2-api.aws_key_pair.key_pair",
            "module.active-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.active-network.module.ec2-api.data.aws_region.current",
            "module.active-network.module.ec2-api.local_file.ssh_key",
            "module.active-network.module.ec2-api.tls_private_key.key_pair",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.nat_gw.aws_nat_gateway.this",
            "module.active-network.module.private-subnets.aws_route.default",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.private-subnets.aws_route_table_association.this",
            "module.active-network.module.private-subnets.aws_subnet.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.active-network.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:501268445310:targetgroup/api-20230611212953644200000006/bd646055d7fd6343",
            "arn_suffix": "targetgroup/api-20230611212953644200000006/bd646055d7fd6343",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:501268445310:targetgroup/api-20230611212953644200000006/bd646055d7fd6343",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "api-20230611212953644200000006",
            "name_prefix": "api-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "api-"
            },
            "tags_all": {
              "Name": "api-",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0512d6922b283dab8"
          },
          "dependencies": [
            "module.active-network.aws_security_group.ec2",
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ec2-api.aws_instance.this",
            "module.active-network.module.ec2-api.aws_key_pair.key_pair",
            "module.active-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.active-network.module.ec2-api.data.aws_region.current",
            "module.active-network.module.ec2-api.local_file.ssh_key",
            "module.active-network.module.ec2-api.tls_private_key.key_pair",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.nat_gw.aws_nat_gateway.this",
            "module.active-network.module.private-subnets.aws_route.default",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.private-subnets.aws_route_table_association.this",
            "module.active-network.module.private-subnets.aws_subnet.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "index_key": "0.instance_1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:501268445310:targetgroup/api-20230611212953644200000006/bd646055d7fd6343-20230611212957161700000008",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:501268445310:targetgroup/api-20230611212953644200000006/bd646055d7fd6343",
            "target_id": "i-07c99733752abe646"
          },
          "dependencies": [
            "module.active-network.aws_security_group.ec2",
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.alb.aws_lambda_permission.lb",
            "module.active-network.module.alb.aws_lb_target_group.main",
            "module.active-network.module.ec2-api.aws_instance.this",
            "module.active-network.module.ec2-api.aws_key_pair.key_pair",
            "module.active-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.active-network.module.ec2-api.data.aws_region.current",
            "module.active-network.module.ec2-api.local_file.ssh_key",
            "module.active-network.module.ec2-api.tls_private_key.key_pair",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.nat_gw.aws_nat_gateway.this",
            "module.active-network.module.private-subnets.aws_route.default",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.private-subnets.aws_route_table_association.this",
            "module.active-network.module.private-subnets.aws_subnet.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "0.instance_2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:501268445310:targetgroup/api-20230611212953644200000006/bd646055d7fd6343-20230611212956893600000007",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:501268445310:targetgroup/api-20230611212953644200000006/bd646055d7fd6343",
            "target_id": "i-05cacdbf0d7e68cfb"
          },
          "dependencies": [
            "module.active-network.aws_security_group.ec2",
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.alb.aws_lambda_permission.lb",
            "module.active-network.module.alb.aws_lb_target_group.main",
            "module.active-network.module.ec2-api.aws_instance.this",
            "module.active-network.module.ec2-api.aws_key_pair.key_pair",
            "module.active-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.active-network.module.ec2-api.data.aws_region.current",
            "module.active-network.module.ec2-api.local_file.ssh_key",
            "module.active-network.module.ec2-api.tls_private_key.key_pair",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.nat_gw.aws_nat_gateway.this",
            "module.active-network.module.private-subnets.aws_route.default",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.private-subnets.aws_route_table_association.this",
            "module.active-network.module.private-subnets.aws_subnet.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.active-network.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:security-group/sg-082ac7f704e00b1b8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-082ac7f704e00b1b8",
            "ingress": [],
            "name": "redes-alb-us-east-1-20230611212704983800000001",
            "name_prefix": "redes-alb-us-east-1-",
            "owner_id": "501268445310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "redes-alb-us-east-1"
            },
            "tags_all": {
              "Name": "redes-alb-us-east-1",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512d6922b283dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_region.current",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.ec2-api[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c503d55a14d7a5f0",
            "arn": "arn:aws:ec2:us-east-1:501268445310:instance/i-07c99733752abe646",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07c99733752abe646",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "express-api-0_key_pair_us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cf3169aa71b121af",
            "private_dns": "ip-10-0-0-77.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.77",
            "public_ip": "54.204.233.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:501268445310:key/46edbfa5-2d75-427a-bd61-ed6342567ad5",
                "throughput": 0,
                "volume_id": "vol-07a23a20a9e4ccd09",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-049cfbbcb487c3a69",
            "tags": {
              "CreatedBy": "terraform",
              "Name": "express-api-0"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Name": "express-api-0",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-012cd3b901491fb03"
            ]
          },
          "dependencies": [
            "module.active-network.aws_security_group.ec2",
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ec2-api.aws_key_pair.key_pair",
            "module.active-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.active-network.module.ec2-api.data.aws_region.current",
            "module.active-network.module.ec2-api.tls_private_key.key_pair",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.nat_gw.aws_nat_gateway.this",
            "module.active-network.module.private-subnets.aws_route.default",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.private-subnets.aws_route_table_association.this",
            "module.active-network.module.private-subnets.aws_subnet.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.ec2-api[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c503d55a14d7a5f0",
            "arn": "arn:aws:ec2:us-east-1:501268445310:instance/i-05cacdbf0d7e68cfb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05cacdbf0d7e68cfb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "express-api-1_key_pair_us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b219c3d92382672a",
            "private_dns": "ip-10-0-1-33.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.33",
            "public_ip": "3.239.149.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:501268445310:key/46edbfa5-2d75-427a-bd61-ed6342567ad5",
                "throughput": 0,
                "volume_id": "vol-07b99356991c4152e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0cc630d92c47eff22",
            "tags": {
              "CreatedBy": "terraform",
              "Name": "express-api-1"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Name": "express-api-1",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-012cd3b901491fb03"
            ]
          },
          "dependencies": [
            "module.active-network.aws_security_group.ec2",
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ec2-api.aws_key_pair.key_pair",
            "module.active-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.active-network.module.ec2-api.data.aws_region.current",
            "module.active-network.module.ec2-api.tls_private_key.key_pair",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.nat_gw.aws_nat_gateway.this",
            "module.active-network.module.private-subnets.aws_route.default",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.private-subnets.aws_route_table_association.this",
            "module.active-network.module.private-subnets.aws_subnet.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.ig",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:internet-gateway/igw-0c429773c065893b3",
            "id": "igw-0c429773c065893b3",
            "owner_id": "501268445310",
            "tags": {
              "Name": "ig-redes"
            },
            "tags_all": {
              "Name": "ig-redes",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "vpc_id": "vpc-0512d6922b283dab8"
          },
          "dependencies": [
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.nat_gw[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00510a499eb53a685",
            "domain": "vpc",
            "id": "eipalloc-00510a499eb53a685",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-222-5-137.compute-1.amazonaws.com",
            "public_ip": "3.222.5.137",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-nat-gw-0"
            },
            "tags_all": {
              "Name": "nat-nat-gw-0",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.nat_gw[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00510a499eb53a685",
            "association_id": "eipassoc-0e6c3f853a97209dc",
            "connectivity_type": "public",
            "id": "nat-093c58847425facc5",
            "network_interface_id": "eni-08a845e127cba7676",
            "private_ip": "10.0.2.169",
            "public_ip": "3.222.5.137",
            "subnet_id": "subnet-032767e2afd553746",
            "tags": {
              "Name": "nat-gw-0"
            },
            "tags_all": {
              "Name": "nat-gw-0",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            }
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.nat_gw[1]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb311f76ea04db25",
            "domain": "vpc",
            "id": "eipalloc-0fb311f76ea04db25",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-208-45-164.compute-1.amazonaws.com",
            "public_ip": "3.208.45.164",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-nat-gw-1"
            },
            "tags_all": {
              "Name": "nat-nat-gw-1",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.nat_gw[1]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb311f76ea04db25",
            "association_id": "eipassoc-00951913e7b393f7b",
            "connectivity_type": "public",
            "id": "nat-03f1f17926980c4b7",
            "network_interface_id": "eni-077d0663ec6bc1928",
            "private_ip": "10.0.3.87",
            "public_ip": "3.208.45.164",
            "subnet_id": "subnet-0f51686ad7da1d1fa",
            "tags": {
              "Name": "nat-gw-1"
            },
            "tags_all": {
              "Name": "nat-gw-1",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            }
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.private-subnets[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06ffb714e2c73be0a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-093c58847425facc5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06ffb714e2c73be0a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.nat_gw.aws_nat_gateway.this",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.private-subnets[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:route-table/rtb-06ffb714e2c73be0a",
            "id": "rtb-06ffb714e2c73be0a",
            "owner_id": "501268445310",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512d6922b283dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.private-subnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f5a155014bb567e",
            "route_table_id": "rtb-06ffb714e2c73be0a",
            "subnet_id": "subnet-049cfbbcb487c3a69"
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.private-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.private-subnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:subnet/subnet-049cfbbcb487c3a69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049cfbbcb487c3a69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501268445310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "vpc_id": "vpc-0512d6922b283dab8"
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.private-subnets[1]",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02f2ca7afee4dbea91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03f1f17926980c4b7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f2ca7afee4dbea9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.nat_gw.aws_nat_gateway.this",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.private-subnets[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:route-table/rtb-02f2ca7afee4dbea9",
            "id": "rtb-02f2ca7afee4dbea9",
            "owner_id": "501268445310",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512d6922b283dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.private-subnets[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c327d8711288d05",
            "route_table_id": "rtb-02f2ca7afee4dbea9",
            "subnet_id": "subnet-0cc630d92c47eff22"
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.private-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.private-subnets[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:subnet/subnet-0cc630d92c47eff22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc630d92c47eff22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501268445310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "vpc_id": "vpc-0512d6922b283dab8"
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.public-subnets[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c429773c065893b3",
            "id": "r-rtb-013cd94307946374f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013cd94307946374f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.public-subnets[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:route-table/rtb-013cd94307946374f",
            "id": "rtb-013cd94307946374f",
            "owner_id": "501268445310",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512d6922b283dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.public-subnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dda77c96a0bed3e9",
            "route_table_id": "rtb-013cd94307946374f",
            "subnet_id": "subnet-032767e2afd553746"
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.public-subnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:subnet/subnet-032767e2afd553746",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032767e2afd553746",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501268445310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "vpc_id": "vpc-0512d6922b283dab8"
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.public-subnets[1]",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c429773c065893b3",
            "id": "r-rtb-0f0288de01951d6251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f0288de01951d625",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.public-subnets[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:route-table/rtb-0f0288de01951d625",
            "id": "rtb-0f0288de01951d625",
            "owner_id": "501268445310",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512d6922b283dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.public-subnets[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0849e78c85ddd7cd2",
            "route_table_id": "rtb-0f0288de01951d625",
            "subnet_id": "subnet-0f51686ad7da1d1fa"
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.public-subnets[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:subnet/subnet-0f51686ad7da1d1fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f51686ad7da1d1fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501268445310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "vpc_id": "vpc-0512d6922b283dab8"
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:vpc/vpc-0512d6922b283dab8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05c9720b2f809a401",
            "default_route_table_id": "rtb-0222d6b2338a6159a",
            "default_security_group_id": "sg-0ed29889a70137806",
            "dhcp_options_id": "dopt-0469a9fd567806c8d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0512d6922b283dab8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0222d6b2338a6159a",
            "owner_id": "501268445310",
            "tags": {
              "Name": "redes-vpc"
            },
            "tags_all": {
              "Name": "redes-vpc",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:501268445310:security-group/sg-04ed2eb5b4feb3e3e",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ed2eb5b4feb3e3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "501268445310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fc97e277e276275"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.passive-network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.passive-network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:501268445310:security-group/sg-0f679432d156de6c4",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f679432d156de6c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2",
            "name_prefix": "",
            "owner_id": "501268445310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2"
            },
            "tags_all": {
              "Name": "ec2",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fc97e277e276275"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:501268445310:loadbalancer/app/redes-alb-us-east-2/d7de451c20387345",
            "arn_suffix": "app/redes-alb-us-east-2/d7de451c20387345",
            "desync_mitigation_mode": "defensive",
            "dns_name": "redes-alb-us-east-2-646680553.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:501268445310:loadbalancer/app/redes-alb-us-east-2/d7de451c20387345",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "redes-alb-us-east-2",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04ed2eb5b4feb3e3e",
              "sg-0a0ea234f4cd752c8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a0801d802bb9895"
              },
              {
                "subnet_id": "subnet-0835798119475750a"
              }
            ],
            "subnets": [
              "subnet-00a0801d802bb9895",
              "subnet-0835798119475750a"
            ],
            "tags": {
              "Name": "redes-alb"
            },
            "tags_all": {
              "Name": "redes-alb",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-06fc97e277e276275",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.passive-network.aws_security_group.alb",
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.data.aws_region.current",
            "module.passive-network.module.alb.aws_security_group.this",
            "module.passive-network.module.ig.aws_internet_gateway.this",
            "module.passive-network.module.public-subnets.aws_route.default",
            "module.passive-network.module.public-subnets.aws_route_table.this",
            "module.passive-network.module.public-subnets.aws_route_table_association.this",
            "module.passive-network.module.public-subnets.aws_subnet.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.passive-network.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:501268445310:listener/app/redes-alb-us-east-2/d7de451c20387345/e02f338e104c2764",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:501268445310:targetgroup/api-20230611212933182100000006/f9326afb4d997a89",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:501268445310:listener/app/redes-alb-us-east-2/d7de451c20387345/e02f338e104c2764",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:501268445310:loadbalancer/app/redes-alb-us-east-2/d7de451c20387345",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "redes-alb"
            },
            "tags_all": {
              "Name": "redes-alb",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.passive-network.aws_security_group.alb",
            "module.passive-network.aws_security_group.ec2",
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.data.aws_region.current",
            "module.passive-network.module.alb.aws_lb.this",
            "module.passive-network.module.alb.aws_lb_target_group.main",
            "module.passive-network.module.alb.aws_security_group.this",
            "module.passive-network.module.ec2-api.aws_instance.this",
            "module.passive-network.module.ec2-api.aws_key_pair.key_pair",
            "module.passive-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.passive-network.module.ec2-api.data.aws_region.current",
            "module.passive-network.module.ec2-api.local_file.ssh_key",
            "module.passive-network.module.ec2-api.tls_private_key.key_pair",
            "module.passive-network.module.ig.aws_internet_gateway.this",
            "module.passive-network.module.nat_gw.aws_eip.nat",
            "module.passive-network.module.nat_gw.aws_nat_gateway.this",
            "module.passive-network.module.private-subnets.aws_route.default",
            "module.passive-network.module.private-subnets.aws_route_table.this",
            "module.passive-network.module.private-subnets.aws_route_table_association.this",
            "module.passive-network.module.private-subnets.aws_subnet.this",
            "module.passive-network.module.public-subnets.aws_route.default",
            "module.passive-network.module.public-subnets.aws_route_table.this",
            "module.passive-network.module.public-subnets.aws_route_table_association.this",
            "module.passive-network.module.public-subnets.aws_subnet.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.passive-network.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:501268445310:targetgroup/api-20230611212933182100000006/f9326afb4d997a89",
            "arn_suffix": "targetgroup/api-20230611212933182100000006/f9326afb4d997a89",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:501268445310:targetgroup/api-20230611212933182100000006/f9326afb4d997a89",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "api-20230611212933182100000006",
            "name_prefix": "api-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "api-"
            },
            "tags_all": {
              "Name": "api-",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06fc97e277e276275"
          },
          "dependencies": [
            "module.passive-network.aws_security_group.ec2",
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.ec2-api.aws_instance.this",
            "module.passive-network.module.ec2-api.aws_key_pair.key_pair",
            "module.passive-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.passive-network.module.ec2-api.data.aws_region.current",
            "module.passive-network.module.ec2-api.local_file.ssh_key",
            "module.passive-network.module.ec2-api.tls_private_key.key_pair",
            "module.passive-network.module.ig.aws_internet_gateway.this",
            "module.passive-network.module.nat_gw.aws_eip.nat",
            "module.passive-network.module.nat_gw.aws_nat_gateway.this",
            "module.passive-network.module.private-subnets.aws_route.default",
            "module.passive-network.module.private-subnets.aws_route_table.this",
            "module.passive-network.module.private-subnets.aws_route_table_association.this",
            "module.passive-network.module.private-subnets.aws_subnet.this",
            "module.passive-network.module.public-subnets.aws_route.default",
            "module.passive-network.module.public-subnets.aws_route_table.this",
            "module.passive-network.module.public-subnets.aws_route_table_association.this",
            "module.passive-network.module.public-subnets.aws_subnet.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "index_key": "0.instance_1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:501268445310:targetgroup/api-20230611212933182100000006/f9326afb4d997a89-20230611212935988400000007",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:501268445310:targetgroup/api-20230611212933182100000006/f9326afb4d997a89",
            "target_id": "i-07e5cc48d6c803e90"
          },
          "dependencies": [
            "module.passive-network.aws_security_group.ec2",
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.alb.aws_lambda_permission.lb",
            "module.passive-network.module.alb.aws_lb_target_group.main",
            "module.passive-network.module.ec2-api.aws_instance.this",
            "module.passive-network.module.ec2-api.aws_key_pair.key_pair",
            "module.passive-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.passive-network.module.ec2-api.data.aws_region.current",
            "module.passive-network.module.ec2-api.local_file.ssh_key",
            "module.passive-network.module.ec2-api.tls_private_key.key_pair",
            "module.passive-network.module.ig.aws_internet_gateway.this",
            "module.passive-network.module.nat_gw.aws_eip.nat",
            "module.passive-network.module.nat_gw.aws_nat_gateway.this",
            "module.passive-network.module.private-subnets.aws_route.default",
            "module.passive-network.module.private-subnets.aws_route_table.this",
            "module.passive-network.module.private-subnets.aws_route_table_association.this",
            "module.passive-network.module.private-subnets.aws_subnet.this",
            "module.passive-network.module.public-subnets.aws_route.default",
            "module.passive-network.module.public-subnets.aws_route_table.this",
            "module.passive-network.module.public-subnets.aws_route_table_association.this",
            "module.passive-network.module.public-subnets.aws_subnet.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "0.instance_2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:501268445310:targetgroup/api-20230611212933182100000006/f9326afb4d997a89-20230611212936311200000008",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:501268445310:targetgroup/api-20230611212933182100000006/f9326afb4d997a89",
            "target_id": "i-055aa8796a5c76a0f"
          },
          "dependencies": [
            "module.passive-network.aws_security_group.ec2",
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.alb.aws_lambda_permission.lb",
            "module.passive-network.module.alb.aws_lb_target_group.main",
            "module.passive-network.module.ec2-api.aws_instance.this",
            "module.passive-network.module.ec2-api.aws_key_pair.key_pair",
            "module.passive-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.passive-network.module.ec2-api.data.aws_region.current",
            "module.passive-network.module.ec2-api.local_file.ssh_key",
            "module.passive-network.module.ec2-api.tls_private_key.key_pair",
            "module.passive-network.module.ig.aws_internet_gateway.this",
            "module.passive-network.module.nat_gw.aws_eip.nat",
            "module.passive-network.module.nat_gw.aws_nat_gateway.this",
            "module.passive-network.module.private-subnets.aws_route.default",
            "module.passive-network.module.private-subnets.aws_route_table.this",
            "module.passive-network.module.private-subnets.aws_route_table_association.this",
            "module.passive-network.module.private-subnets.aws_subnet.this",
            "module.passive-network.module.public-subnets.aws_route.default",
            "module.passive-network.module.public-subnets.aws_route_table.this",
            "module.passive-network.module.public-subnets.aws_route_table_association.this",
            "module.passive-network.module.public-subnets.aws_subnet.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.passive-network.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:501268445310:security-group/sg-0a0ea234f4cd752c8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a0ea234f4cd752c8",
            "ingress": [],
            "name": "redes-alb-us-east-2-20230611212706078500000001",
            "name_prefix": "redes-alb-us-east-2-",
            "owner_id": "501268445310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "redes-alb-us-east-2"
            },
            "tags_all": {
              "Name": "redes-alb-us-east-2",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fc97e277e276275"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.passive-network.data.aws_region.current",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.ec2-api[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dcbd2aa4a07a555b",
            "arn": "arn:aws:ec2:us-east-2:501268445310:instance/i-07e5cc48d6c803e90",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e5cc48d6c803e90",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "express-api-0_key_pair_us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05a54d54ee33b42d2",
            "private_dns": "ip-10-0-0-190.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.190",
            "public_ip": "18.117.11.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:501268445310:key/107d4f02-2061-4d35-a218-9a6fa23397b0",
                "throughput": 0,
                "volume_id": "vol-0cc1c3c9e4115a706",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d834e635f6cf5551",
            "tags": {
              "CreatedBy": "terraform",
              "Name": "express-api-0"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Name": "express-api-0",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f679432d156de6c4"
            ]
          },
          "dependencies": [
            "module.passive-network.aws_security_group.ec2",
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.ec2-api.aws_key_pair.key_pair",
            "module.passive-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.passive-network.module.ec2-api.data.aws_region.current",
            "module.passive-network.module.ec2-api.tls_private_key.key_pair",
            "module.passive-network.module.ig.aws_internet_gateway.this",
            "module.passive-network.module.nat_gw.aws_eip.nat",
            "module.passive-network.module.nat_gw.aws_nat_gateway.this",
            "module.passive-network.module.private-subnets.aws_route.default",
            "module.passive-network.module.private-subnets.aws_route_table.this",
            "module.passive-network.module.private-subnets.aws_route_table_association.this",
            "module.passive-network.module.private-subnets.aws_subnet.this",
            "module.passive-network.module.public-subnets.aws_route.default",
            "module.passive-network.module.public-subnets.aws_route_table.this",
            "module.passive-network.module.public-subnets.aws_route_table_association.this",
            "module.passive-network.module.public-subnets.aws_subnet.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.ec2-api[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dcbd2aa4a07a555b",
            "arn": "arn:aws:ec2:us-east-2:501268445310:instance/i-055aa8796a5c76a0f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055aa8796a5c76a0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "express-api-1_key_pair_us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07396e1206ab422b5",
            "private_dns": "ip-10-0-1-224.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.224",
            "public_ip": "18.118.199.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:501268445310:key/107d4f02-2061-4d35-a218-9a6fa23397b0",
                "throughput": 0,
                "volume_id": "vol-021f8aa37581cba21",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0e7f50f5123fe5fd7",
            "tags": {
              "CreatedBy": "terraform",
              "Name": "express-api-1"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Name": "express-api-1",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f679432d156de6c4"
            ]
          },
          "dependencies": [
            "module.passive-network.aws_security_group.ec2",
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.ec2-api.aws_key_pair.key_pair",
            "module.passive-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.passive-network.module.ec2-api.data.aws_region.current",
            "module.passive-network.module.ec2-api.tls_private_key.key_pair",
            "module.passive-network.module.ig.aws_internet_gateway.this",
            "module.passive-network.module.nat_gw.aws_eip.nat",
            "module.passive-network.module.nat_gw.aws_nat_gateway.this",
            "module.passive-network.module.private-subnets.aws_route.default",
            "module.passive-network.module.private-subnets.aws_route_table.this",
            "module.passive-network.module.private-subnets.aws_route_table_association.this",
            "module.passive-network.module.private-subnets.aws_subnet.this",
            "module.passive-network.module.public-subnets.aws_route.default",
            "module.passive-network.module.public-subnets.aws_route_table.this",
            "module.passive-network.module.public-subnets.aws_route_table_association.this",
            "module.passive-network.module.public-subnets.aws_subnet.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.ig",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:501268445310:internet-gateway/igw-0ddd490eb9863f101",
            "id": "igw-0ddd490eb9863f101",
            "owner_id": "501268445310",
            "tags": {
              "Name": "ig-redes"
            },
            "tags_all": {
              "Name": "ig-redes",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "vpc_id": "vpc-06fc97e277e276275"
          },
          "dependencies": [
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.nat_gw[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fc50a00c8a6ff00",
            "domain": "vpc",
            "id": "eipalloc-04fc50a00c8a6ff00",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-128-13-110.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.13.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-nat-gw-0"
            },
            "tags_all": {
              "Name": "nat-nat-gw-0",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.nat_gw[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fc50a00c8a6ff00",
            "association_id": "eipassoc-097ac4946b1904125",
            "connectivity_type": "public",
            "id": "nat-0ec7d8e3d9ee844ee",
            "network_interface_id": "eni-0ff8f490337020d62",
            "private_ip": "10.0.2.89",
            "public_ip": "3.128.13.110",
            "subnet_id": "subnet-0835798119475750a",
            "tags": {
              "Name": "nat-gw-0"
            },
            "tags_all": {
              "Name": "nat-gw-0",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            }
          },
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.ig.aws_internet_gateway.this",
            "module.passive-network.module.nat_gw.aws_eip.nat",
            "module.passive-network.module.public-subnets.aws_route.default",
            "module.passive-network.module.public-subnets.aws_route_table.this",
            "module.passive-network.module.public-subnets.aws_route_table_association.this",
            "module.passive-network.module.public-subnets.aws_subnet.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.nat_gw[1]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058edf2c18ea1553e",
            "domain": "vpc",
            "id": "eipalloc-058edf2c18ea1553e",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-143-198-142.us-east-2.compute.amazonaws.com",
            "public_ip": "3.143.198.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-nat-gw-1"
            },
            "tags_all": {
              "Name": "nat-nat-gw-1",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.nat_gw[1]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058edf2c18ea1553e",
            "association_id": "eipassoc-05ba31fbd756901fa",
            "connectivity_type": "public",
            "id": "nat-0824a44552663c68d",
            "network_interface_id": "eni-01b615e6752c015d1",
            "private_ip": "10.0.3.189",
            "public_ip": "3.143.198.142",
            "subnet_id": "subnet-00a0801d802bb9895",
            "tags": {
              "Name": "nat-gw-1"
            },
            "tags_all": {
              "Name": "nat-gw-1",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            }
          },
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.ig.aws_internet_gateway.this",
            "module.passive-network.module.nat_gw.aws_eip.nat",
            "module.passive-network.module.public-subnets.aws_route.default",
            "module.passive-network.module.public-subnets.aws_route_table.this",
            "module.passive-network.module.public-subnets.aws_route_table_association.this",
            "module.passive-network.module.public-subnets.aws_subnet.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.private-subnets[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0911ac1c23eda48741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ec7d8e3d9ee844ee",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0911ac1c23eda4874",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.ig.aws_internet_gateway.this",
            "module.passive-network.module.nat_gw.aws_eip.nat",
            "module.passive-network.module.nat_gw.aws_nat_gateway.this",
            "module.passive-network.module.private-subnets.aws_route_table.this",
            "module.passive-network.module.public-subnets.aws_route.default",
            "module.passive-network.module.public-subnets.aws_route_table.this",
            "module.passive-network.module.public-subnets.aws_route_table_association.this",
            "module.passive-network.module.public-subnets.aws_subnet.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.private-subnets[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:501268445310:route-table/rtb-0911ac1c23eda4874",
            "id": "rtb-0911ac1c23eda4874",
            "owner_id": "501268445310",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fc97e277e276275"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.private-subnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dc9a2daa10f4eda",
            "route_table_id": "rtb-0911ac1c23eda4874",
            "subnet_id": "subnet-0d834e635f6cf5551"
          },
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.private-subnets.aws_route_table.this",
            "module.passive-network.module.private-subnets.aws_subnet.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.private-subnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:501268445310:subnet/subnet-0d834e635f6cf5551",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d834e635f6cf5551",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501268445310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "vpc_id": "vpc-06fc97e277e276275"
          },
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.private-subnets[1]",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ce1f3b2444f162d41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0824a44552663c68d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ce1f3b2444f162d4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.ig.aws_internet_gateway.this",
            "module.passive-network.module.nat_gw.aws_eip.nat",
            "module.passive-network.module.nat_gw.aws_nat_gateway.this",
            "module.passive-network.module.private-subnets.aws_route_table.this",
            "module.passive-network.module.public-subnets.aws_route.default",
            "module.passive-network.module.public-subnets.aws_route_table.this",
            "module.passive-network.module.public-subnets.aws_route_table_association.this",
            "module.passive-network.module.public-subnets.aws_subnet.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.private-subnets[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:501268445310:route-table/rtb-0ce1f3b2444f162d4",
            "id": "rtb-0ce1f3b2444f162d4",
            "owner_id": "501268445310",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fc97e277e276275"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.private-subnets[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017313105b5d94854",
            "route_table_id": "rtb-0ce1f3b2444f162d4",
            "subnet_id": "subnet-0e7f50f5123fe5fd7"
          },
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.private-subnets.aws_route_table.this",
            "module.passive-network.module.private-subnets.aws_subnet.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.private-subnets[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:501268445310:subnet/subnet-0e7f50f5123fe5fd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7f50f5123fe5fd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501268445310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "vpc_id": "vpc-06fc97e277e276275"
          },
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.public-subnets[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ddd490eb9863f101",
            "id": "r-rtb-09ca718fad4e6214b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ca718fad4e6214b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.ig.aws_internet_gateway.this",
            "module.passive-network.module.public-subnets.aws_route_table.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.public-subnets[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:501268445310:route-table/rtb-09ca718fad4e6214b",
            "id": "rtb-09ca718fad4e6214b",
            "owner_id": "501268445310",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fc97e277e276275"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.public-subnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073100aa9c8fa0412",
            "route_table_id": "rtb-09ca718fad4e6214b",
            "subnet_id": "subnet-0835798119475750a"
          },
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.public-subnets.aws_route_table.this",
            "module.passive-network.module.public-subnets.aws_subnet.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.public-subnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:501268445310:subnet/subnet-0835798119475750a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0835798119475750a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501268445310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "vpc_id": "vpc-06fc97e277e276275"
          },
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.public-subnets[1]",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ddd490eb9863f101",
            "id": "r-rtb-06f5897009a17b4551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f5897009a17b455",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.ig.aws_internet_gateway.this",
            "module.passive-network.module.public-subnets.aws_route_table.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.public-subnets[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:501268445310:route-table/rtb-06f5897009a17b455",
            "id": "rtb-06f5897009a17b455",
            "owner_id": "501268445310",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fc97e277e276275"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.public-subnets[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fc24444612fe9aa",
            "route_table_id": "rtb-06f5897009a17b455",
            "subnet_id": "subnet-00a0801d802bb9895"
          },
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.public-subnets.aws_route_table.this",
            "module.passive-network.module.public-subnets.aws_subnet.this",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.public-subnets[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:501268445310:subnet/subnet-00a0801d802bb9895",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a0801d802bb9895",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501268445310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            },
            "vpc_id": "vpc-06fc97e277e276275"
          },
          "dependencies": [
            "module.passive-network.data.aws_availability_zones.available",
            "module.passive-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.passive-network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:501268445310:vpc/vpc-06fc97e277e276275",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0546849c8ba55c56f",
            "default_route_table_id": "rtb-0c0e792dcdd75b68f",
            "default_security_group_id": "sg-090f0e9bb38cc484a",
            "dhcp_options_id": "dopt-0c9a937ec0133798a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06fc97e277e276275",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0e792dcdd75b68f",
            "owner_id": "501268445310",
            "tags": {
              "Name": "redes-vpc"
            },
            "tags_all": {
              "Name": "redes-vpc",
              "author": "Grupo13",
              "created-by": "terraform",
              "subject": "Redes",
              "university": "ITBA",
              "version": "1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}